Link and debug GUI, fix QR code