@@ -6,9 +6,9 @@ package loginsystem;
 
 import java.security.*;
 import java.util.*;
-import java.nio.charset.*;
-import com.j256.twofactorauth.TimeBasedOneTimePasswordUtil;
-import java.net.URL;
+import com.j256.twofactorauth.*;
+import java.awt.*;
+import java.net.*;
 import java.io.*;
 import javax.imageio.*;
 import javax.swing.*;
@@ -22,12 +22,7 @@ public class RegistrationSystem {
 	/**
 	 * Length of password salt in bytes
 	 */
-	private static final int SALT_LENGTH = 128;
-
-	/**
-	 * Use UTF-8 to encode hash and salt
-	 */
-	private static final Charset CHARSET = StandardCharsets.UTF_8;
+	private static final int SALT_LENGTH = 32;
 
 	/**
 	 * Enforce minimum password length
@@ -43,7 +38,15 @@ public class RegistrationSystem {
 	private final Storage store = new Storage();
 
 	// needs parent frame to open dialogs
-	private JFrame currentFrame = null;
+	private JFrame frame;
+
+	/**
+	 *
+	 * @param frame
+	 */
+	public RegistrationSystem(JFrame frame) {
+		this.frame = frame;
+	}
 
 	/**
 	 * Registers a user
@@ -58,18 +61,21 @@ public class RegistrationSystem {
 	 */
 	public boolean register(String username, String password, String email, String phone, String securityQuestion, String securityAnswer) {
 		// check if fields are valid
-		if (!validateUsername(username) || !validatePW(password)) {
+		if (!validateUsername(username) || !validatePW(password) || !validatePhone(phone)) {
 			return false;
 		}
-		if (securityQuestion.contains(Storage.DELIM) || securityAnswer.contains(Storage.DELIM)) {
-			System.out.println("Fields cannot contain \"" + Storage.DELIM + "\"!!!");
+		if (email.contains(Storage.DELIM) || securityQuestion.contains(Storage.DELIM) || securityAnswer.contains(Storage.DELIM)) {
+			showError("Fields cannot contain \"" + Storage.DELIM + "\"!!!");
 			return false;
 		}
 		// create user
 		User user = new User(username, email, phone, securityQuestion, securityAnswer);
 		hashAndSalt(user, password);
+		generate2FA(user);
 		// save to disk
+		store.getUsers().put(username, user);
 		store.storeUsers();
+		showInfo("Account created!");
 		return true;
 	}
 
@@ -78,21 +84,31 @@ public class RegistrationSystem {
 	 *
 	 * @param username
 	 * @param password
+	 * @param twoFACode
 	 * @return true if successful
 	 */
-	public boolean login(String username, String password) {
+	public boolean login(String username, String password, String twoFACode) {
 		// find user
 		HashMap<String, User> users = store.getUsers();
 		if (!users.containsKey(username)) {
-			System.out.println("User not found!!!");
+			showError("User not found!!!");
 			return false;
 		}
 		// check password
 		User user = users.get(username);
 		if (!checkPassword(user, password)) {
-			System.out.println("Incorrect password!!!");
 			return false;
 		}
+		// check 2fa token
+		try {
+			if (!check2FA(user.getSecret2FA(), Integer.parseInt(twoFACode))) {
+				return false;
+			}
+		} catch (NumberFormatException ex) { // if 2fa code not integer
+			showError("2FA code must be a number!!!");
+			return false;
+		}
+		showInfo("Logged in!");
 		return true;
 	}
 
@@ -100,15 +116,15 @@ public class RegistrationSystem {
 	 * Check if username is valid at account creation
 	 *
 	 * @param username
-	 * @return true if successful
+	 * @return true if valid
 	 */
 	public boolean validateUsername(String username) {
 		if (username.contains(Storage.DELIM)) {
-			System.out.println("Username cannot contain \"" + Storage.DELIM + "\"!!!");
+			showError("Username cannot contain \"" + Storage.DELIM + "\"!!!");
 			return false;
 		}
-		if (!store.getUsers().containsKey(username)) {
-			System.out.println("Username already exists!!!");
+		if (store.getUsers().containsKey(username)) {
+			showError("Username already exists!!!");
 			return false;
 		}
 		return true;
@@ -118,20 +134,20 @@ public class RegistrationSystem {
 	 * Check if password is valid at account creation
 	 *
 	 * @param password
-	 * @return true if successful
+	 * @return true if valid
 	 */
 	public boolean validatePW(String password) {
 		// basic checks
 		if (password.contains(Storage.DELIM)) {
-			System.out.println("Password cannot contain \"" + Storage.DELIM + "\"!!!");
+			showError("Password cannot contain \"" + Storage.DELIM + "\"!!!");
 			return false;
 		}
 		if (password.length() < MIN_PW_LENGTH) {
-			System.out.println("Password too short!!! Must be longer than " + MIN_PW_LENGTH + " characters!!!");
+			showError("Password too short!!! Must be longer than " + MIN_PW_LENGTH + " characters!!!");
 			return false;
 		}
 		if (store.getBadPass().contains(password)) {
-			System.out.println("Common password detected!!! Choose a stronger password!!!");
+			showError("Common password detected!!! Choose a stronger password!!!");
 			return false;
 		}
 
@@ -152,16 +168,32 @@ public class RegistrationSystem {
 			}
 		}
 		if (!hasLowerCase) {
-			System.out.println("Must contain a lowercase character!!!");
+			showError("Must contain a lowercase character!!!");
 			return false;
 		} else if (!hasUpperCase) {
-			System.out.println("Must contain a uppercase character!!!");
+			showError("Must contain a uppercase character!!!");
 			return false;
 		} else if (!hasNumber) {
-			System.out.println("Must contain a number!!!");
+			showError("Must contain a number!!!");
 			return false;
 		} else if (!hasSpecial) {
-			System.out.println("Must contain a special character!!!");
+			showError("Must contain a special character!!!");
+			return false;
+		}
+		return true;
+	}
+
+	/**
+	 * Check if phone number is a number
+	 *
+	 * @param phone
+	 * @return true if is a number
+	 */
+	public boolean validatePhone(String phone) {
+		try {
+			Long.parseLong(phone);
+		} catch (NumberFormatException ex) { // if phone number is not a number
+			showError("Phone number must be a number!!!");
 			return false;
 		}
 		return true;
@@ -173,12 +205,15 @@ public class RegistrationSystem {
 	 * @param secret
 	 * @param code
 	 * @return true if successful
-	 * @throws java.security.GeneralSecurityException
 	 */
-	public boolean check2FA(String secret, int code) throws GeneralSecurityException {
-		if (TimeBasedOneTimePasswordUtil.validateCurrentNumber(secret, code, TWOFA_WINDOW)) {
-			System.out.println("Incorrect 2FA validation code!!!");
-			return false;
+	public boolean check2FA(String secret, int code) {
+		try {
+			if (TimeBasedOneTimePasswordUtil.validateCurrentNumber(secret, code, TWOFA_WINDOW)) {
+				showError("Incorrect 2FA verification code!!!");
+				return false;
+			}
+		} catch (GeneralSecurityException ex) {
+			showError("2FA library error!!!");
 		}
 		return true;
 	}
@@ -186,26 +221,37 @@ public class RegistrationSystem {
 	/**
 	 * Generate 2FA code seed
 	 *
+	 * The library uses SHA-256 to generate codes, your authenticator app will
+	 * ask for this
+	 *
 	 * @param user
 	 */
 	public void generate2FA(User user) {
 		// generate secret
 		String secret = TimeBasedOneTimePasswordUtil.generateBase32Secret();
-		System.out.println("Your secret is: " + secret);
-		System.out.println("(You do not need to store this if you are able to scan the QR code)");
-		// get qr code url
-		String url = TimeBasedOneTimePasswordUtil.qrImageUrl("LoginSystem", secret);
+		// qr code dialog
+		JDialog dialog = new JDialog();
+		JTextField textLabel = new JTextField("Your secret is: " + secret);
+		textLabel.setEditable(false);
+		dialog.add(textLabel, BorderLayout.NORTH);
+
+		// get qr code address
+		String otpURL = TimeBasedOneTimePasswordUtil.generateOtpAuthUrl(user.getUsername(), secret);
+		String webAddress = "https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=" + otpURL;
 		try {
-			// qr code image dialog
-			JDialog dialog = new JDialog();
-			dialog.setUndecorated(true);
-			JLabel label = new JLabel(new ImageIcon(ImageIO.read(new URL(url))));
-			dialog.add(label);
-			dialog.pack();
-			dialog.setVisible(true);
+			URL url = URI.create(webAddress).toURL();
+			JLabel imgLabel = new JLabel(new ImageIcon(ImageIO.read(url)));
+			dialog.add(imgLabel, BorderLayout.SOUTH);
 		} catch (IOException ex) {
-			System.out.println("Image loading failed!!!");
+			// add url link in case image doesn't load
+			JTextField linkLabel = new JTextField("\nQR code URL: " + webAddress);
+			textLabel.setEditable(false);
+			dialog.add(linkLabel, BorderLayout.CENTER);
+			dialog.repaint();
 		}
+		dialog.pack();
+		dialog.setAlwaysOnTop(true);
+		dialog.setVisible(true);
 		// store secret
 		user.setSecret2FA(secret);
 	}
@@ -223,10 +269,10 @@ public class RegistrationSystem {
 			// this salts the algorithm appearently
 			md.update(salt);
 			// generate hash and return its string
-			byte[] hashBytes = md.digest(password.getBytes(CHARSET));
-			return new String(hashBytes, CHARSET);
+			byte[] hashBytes = md.digest(password.getBytes());
+			return encodeB64(hashBytes);
 		} catch (NoSuchAlgorithmException ex) {
-			System.out.println("This computer can't run SHA-512!!!");
+			showError("This computer can't run SHA-512, exiting!!!");
 			ex.getStackTrace();
 			System.exit(1);
 			return "";
@@ -247,12 +293,7 @@ public class RegistrationSystem {
 
 		// generate hash and salt strings
 		String hash = getHash(saltBytes, password);
-		String salt = new String(saltBytes, CHARSET);
-		// hash contains delimiter edge case
-		if (hash.contains(Storage.DELIM) || salt.contains(Storage.DELIM)) {
-			hashAndSalt(user, password);
-			return;
-		}
+		String salt = encodeB64(saltBytes);
 
 		// store them
 		user.setPWHash(hash);
@@ -270,45 +311,116 @@ public class RegistrationSystem {
 		String hash = user.getPWHash();
 		String salt = user.getPWSalt();
 		// check input against hash and salt
-		String inputHash = getHash(salt.getBytes(CHARSET), input);
+		String inputHash = getHash(decodeB64(salt), input);
 		if (!hash.equals(inputHash)) {
-			System.out.println("Wrong password!!!");
+			showError("Wrong password!!!");
 			return false;
 		}
 		return true;
 	}
 
 	/**
+	 * Perform a password reset
 	 *
-	 * @param user
+	 * @param username
 	 * @param newPass
 	 * @param phone
 	 * @param email
 	 * @param securityAnswer
 	 * @return true if successful
 	 */
-	public boolean resetPassword(User user, String newPass, String phone, String email, String securityAnswer) {
-		if (validatePW(newPass) && user.getPhone().equals(phone) && user.getEmail().equals(email)
-				&& user.getSecurityAnswer().equals(securityAnswer)) {
+	public boolean resetPassword(String username, String newPass, String phone, String email, String securityAnswer) {
+		if (!store.getUsers().containsKey(username)) {
+			showError("User not found!!!");
+			return false;
+		}
+		User user = store.getUsers().get(username);
+		// check if info is correct
+		if (validatePhone(phone) && validatePW(newPass) && user.getPhone().equals(phone)
+				&& user.getEmail().equals(email) && user.getSecurityAnswer().equals(securityAnswer)) {
+			// generate new hash, salt, and 2fa token
 			hashAndSalt(user, newPass);
 			generate2FA(user);
+			store.storeUsers();
+			showInfo("Password reset successful!");
 			return true;
 		}
+		showError("Password reset failed!!!");
 		return false;
 
 	}
 
 	/**
-	 * @return the currentFrame
+	 * Retrieves security question for the label in the reset tab
+	 *
+	 * @param username
+	 * @param email
+	 * @param phone
+	 * @return
 	 */
-	public JFrame getCurrentFrame() {
-		return currentFrame;
+	public String retrieveSecurityQuestion(String username, String email, String phone) {
+		if (!store.getUsers().containsKey(username)) {
+			return "";
+		}
+		// only give security question if phone and email is right
+		User user = store.getUsers().get(username);
+		if (user.getPhone().equals(phone) && user.getEmail().equals(email)) {
+			return user.getSecurityQuestion();
+		}
+		return "";
 	}
 
 	/**
-	 * @param currentFrame the currentFrame to set
+	 * Dialog to show error
+	 *
+	 * @param message
 	 */
-	public void setCurrentFrame(JFrame currentFrame) {
-		this.currentFrame = currentFrame;
+	public void showError(String message) {
+		JOptionPane.showMessageDialog(frame, message,
+				"Swing Tester", JOptionPane.ERROR_MESSAGE);
+	}
+
+	/**
+	 * Dialog to show info message
+	 *
+	 * @param message
+	 */
+	public void showInfo(String message) {
+		JOptionPane.showMessageDialog(frame, message,
+				"Swing Tester", JOptionPane.INFORMATION_MESSAGE);
+	}
+
+	/**
+	 * @return the currentFrame
+	 */
+	public JFrame getFrame() {
+		return frame;
+	}
+
+	/**
+	 * @param frame the currentFrame to set
+	 */
+	public void setFrame(JFrame frame) {
+		this.frame = frame;
+	}
+
+	/**
+	 * Encode base 64
+	 *
+	 * @param input
+	 * @return encoded string
+	 */
+	public static String encodeB64(byte[] input) {
+		return Base64.getEncoder().encodeToString(input);
+	}
+
+	/**
+	 * Decode base 64
+	 *
+	 * @param input
+	 * @return decoded byte array
+	 */
+	public static byte[] decodeB64(String input) {
+		return Base64.getDecoder().decode(input);
 	}
 }
